<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/icourse_score_item_bg"
        android:gravity="center"
        android:paddingBottom="2dip"
        android:paddingLeft="3dip"
        android:paddingRight="3dip" >

        <!-- android:background="@color/background" -->

        <TextView
            android:id="@+id/ischedule_score_item_coursename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ischedule_score_item_status"
            android:drawableRight="@drawable/icourse_score_item_divider"
            android:gravity="center"
            android:text="@string/icourse_course_name"
            android:textColor="@color/ischedule_score_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ischedule_score_item_status"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ischedule_score_item_creditpoints"
            android:drawableRight="@drawable/icourse_score_item_divider"
            android:gravity="center"
            android:text="@string/icourse_status"
            android:textColor="@color/ischedule_score_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ischedule_score_item_creditpoints"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/ischedule_score_item_score"
            android:drawableRight="@drawable/icourse_score_item_divider"
            android:gravity="center"
            android:text="@string/icourse_credit_point"
            android:textColor="@color/ischedule_score_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ischedule_score_item_score"
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/icourse_score_item_divider"
            android:gravity="center"
            android:text="@string/icourse_grade"
            android:textColor="@color/ischedule_score_title"
            android:textSize="20sp"
            android:textStyle="italic|bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/icourse_display_grade_tips_lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/icourse_display_grade_tips_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="23sp"
            android:text="@string/icourse_display_grade_error_tips" />
        
        <Button android:id="@+id/icourse_display_greae_tips_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnOnClickLogin"
            android:text="@string/login"/>
        
    </LinearLayout>

    <ListView
        android:id="@+id/ischedule_score_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>