<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/fragment_ischedule_jwc_dialog_textview_error_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:textColor="#FFFFFFFF"
        android:textIsSelectable="true" />

    <EditText
        android:id="@+id/fragment_ischedule_jwc_dialog_edittext_account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/fragment_ischedule_jwc_dialog_edittext_account_number"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/fragment_ischedule_jwc_dialog_edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/fragment_ischedule_jwc_dialog_edittext_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/fragment_ischedule_jwc_dialog_checkbox_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="2dp"
            android:text="@string/fragment_ischedule_jwc_dialog_checkbox_remember_me"
            android:textColor="#FFFFFFFF" />

        <ImageView
            android:id="@+id/fragment_ischedule_jwc_dialog_imageview_captcha"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginLeft="4dp"
            android:contentDescription="@string/fragment_ischedule_jwc_dialog_imageview_captcha_description" />

        <EditText
            android:id="@+id/fragment_ischedule_jwc_dialog_edittext_captcha"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:hint="@string/fragment_ischedule_jwc_dialog_edittext_captcha" />
    </LinearLayout>

</LinearLayout>