<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <include
        android:id="@+id/path_title_bar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/xiaoyuandt_path_source_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/path_source"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

             <AutoCompleteTextView
                android:id="@+id/xiaoyuandt_path_source_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:layout_toRightOf="@+id/xiaoyuandt_path_source_tv"
                android:drawableLeft="@drawable/xiaoyuandt_ic_btn_search"
                android:hint="请输入起点" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/xiaoyuandt_path_dest_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/path_dest"
                android:textColor="@color/black"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

             <AutoCompleteTextView
                android:id="@+id/xiaoyuandt_path_dest_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:layout_toRightOf="@+id/xiaoyuandt_path_dest_tv"
                android:drawableLeft="@drawable/xiaoyuandt_ic_btn_search"
                android:hint="请输入终点" />
        </RelativeLayout>

        <Button
            android:id="@+id/xiaoyuandt_path_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:text="@string/confirm" />
        <TextView
            android:id="@+id/xiaoyuandt_path_notice_textview"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
             android:textColor="@color/black"
             android:textSize="20sp"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>